# NREngine

./: CMakeLists.txt
NREngine/: Program.cpp  lamp.cpp  lamp.h  myentity.cpp  myentity.h  myscene.cpp  myscene.h
NREngine/assets/: 2high.mtl  Bear2.fbx  plane.mtl  stickman.fbx  untitled.mtl
NREngine/assets/Bear/: Bear.blend  Bear.mtl
NREngine/assets/Spaceship/: spaceship.blend  spaceship.blend1
NREngine/assets/lamps/: Lamp.blend  Lamp.blend1  Lamp.mtl
common/: camera.h  core.cpp  core.h  entity.cpp  entity.h  mesh.h  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h  skybox.h  text.cpp  text.h  texture.cpp  texture.h
